make protocol flexible

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Code+Pro:200,300,400,500,600,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link href="//fonts.googleapis.com/css?family=Montserrat:400,700|Source+Code+Pro:200,300,400,500,600,700,900" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/main.css">
 </head>
 <body>
@@ -99,12 +99,12 @@
     {{/}}
   </script>
 
-  <script src="https://cdn.jsdelivr.net/lodash/4.15.0/lodash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
-  <script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
-  <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-  <script src="http://cdn.ractivejs.org/latest/ractive.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
+  <script src="//cdn.jsdelivr.net/lodash/4.15.0/lodash.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
+  <script src="//npmcdn.com/axios/dist/axios.min.js"></script>
+  <script src="//cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+  <script src="//cdn.ractivejs.org/latest/ractive.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
 
   <script type="text/javascript" src="./data/october-2015.js"></script>
   <script type="text/javascript" src="./data/february-2016.js"></script>
