--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
   <script src="//npmcdn.com/axios/dist/axios.min.js"></script>
   <script src="//cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-  <script src="//cdn.ractivejs.org/latest/ractive.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ractive/0.7.3/ractive.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
 
   <script type="text/javascript" src="./data/october-2015.js"></script>
