--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <script id="jam-event" type="text/ractive">
     {{#with jam}}
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="jam-event-title">
           <h3>data jam on</h3>
           <h1>{{topic}}</h1>
@@ -52,7 +52,7 @@
         </a>
       </div>
       {{#showcase.length}}
-      <div class="col-sm-6" id="showcase">
+      <div class="col-md-6" id="showcase">
         <h3>showcase</h3>
         <div decorator='scrolly' class="list-group">
           {{#showcase:itemIndex}}
