--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </p>
         <mark markdown="{{description}}"/>
         <a target="_blank" href="https://github.com/houstondatavis/{{githubRepo}}">
-          get the data from <i class="fa fa-github" aria-hidden="true"></i>
+          learn more and get the data from <i class="fa fa-github" aria-hidden="true"></i>
         </a>
       </div>
       <div class="col-md-6" id="showcase">
