--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
   <script type="text/javascript" src="./data/february-2016.js"></script>
   <script type="text/javascript" src="./data/august-2016.js"></script>
   <script type="text/javascript" src="./data/october-2016.js"></script>
+  <script type="text/javascript" src="./data/december-2016.js"></script>
   <script type="text/javascript" src="./data/events.js"></script>
 
   <script type="text/javascript" src="./assets/jammer.js"></script>
