add june stuffs

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
   <script type="text/javascript" src="./data/october-2016.js"></script>
   <script type="text/javascript" src="./data/december-2016.js"></script>
   <script type="text/javascript" src="./data/february-2017.js"></script>
+  <script type="text/javascript" src="./data/june-2017.js"></script>
   <script type="text/javascript" src="./data/events.js"></script>
 
   <script type="text/javascript" src="./assets/jammer.js"></script>
