--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
   <script type="text/javascript" src="./data/february-2017.js"></script>
   <script type="text/javascript" src="./data/june-2017.js"></script>
   <script type="text/javascript" src="./data/july-2017.js"></script>
+  <script type="text/javascript" src="./data/august-2017.js"></script>
+  <script type="text/javascript" src="./data/october-2017.js"></script>
+  <script type="text/javascript" src="./data/january-2018.js"></script>
+  <script type="text/javascript" src="./data/february-2018.js"></script>
   <script type="text/javascript" src="./data/events.js"></script>
 
   <script type="text/javascript" src="./assets/jammer.js"></script>
