--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
   <script type="text/javascript" src="./data/october-2017.js"></script>
   <script type="text/javascript" src="./data/january-2018.js"></script>
   <script type="text/javascript" src="./data/february-2018.js"></script>
+  <script type="text/javascript" src="./data/june-2018.js"></script>
   <script type="text/javascript" src="./data/events.js"></script>
 
   <script type="text/javascript" src="./assets/jammer.js"></script>
