--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
 
   <script id="link" type="text/ractive">
     {{# isPlot}}
-      <svg decorator='randoBar' class="plotter" width="100%" height="50" version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <svg class="jam-showcase-item plotter" decorator='randoBar' width="100%" height="50" version="1.1" xmlns="http://www.w3.org/2000/svg">
         <g stroke="none" strokeWidth="1" fill="none" fill-rule="evenodd"></g>
         <g fill="rgba(255, 255, 255, 0.9)">
           <rect x="6" y="18" width="{{labelWidth}}" height="20"></rect>
-          <text x="10" y="35" fill="#333">see {{label}}</text>
+          <text x="18" y="35" fill="#333">see {{label}}</text>
         </g>
       </svg>
     {{elseif isCode}}
-      <a target="_blank" href="{{url}}">
+      <a target="_blank" href="{{url}}" class="jam-showcase-item">
         <pre><code>see code</code></pre>
       </a>
     {{/}}
